; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_lua.c_mp_lua_PITA.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_lua.c_mp_lua_PITA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"ohthispain\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"__index\00", align 1
@destroy_crap = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [5 x i8] c"__gc\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @mp_lua_PITA to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @mp_lua_PITA(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8**, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i8** @lua_newuserdata(i32* %4, i32 8)
  store i8** %5, i8*** %3, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i64 @luaL_newmetatable(i32* %6, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %19

9:                                                ; preds = %1
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @lua_pushvalue(i32* %10, i32 -1)
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @lua_setfield(i32* %12, i32 -2, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %14 = load i32*, i32** %2, align 8
  %15 = load i32, i32* @destroy_crap, align 4
  %16 = call i32 @lua_pushcfunction(i32* %14, i32 %15)
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @lua_setfield(i32* %17, i32 -2, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  br label %19

19:                                               ; preds = %9, %1
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @lua_setmetatable(i32* %20, i32 -2)
  %22 = call i8* @talloc_new(i32* null)
  %23 = load i8**, i8*** %3, align 8
  store i8* %22, i8** %23, align 8
  %24 = load i8**, i8*** %3, align 8
  %25 = load i8*, i8** %24, align 8
  ret i8* %25
}

declare dso_local i8** @lua_newuserdata(i32*, i32) #1

declare dso_local i64 @luaL_newmetatable(i32*, i8*) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1

declare dso_local i32 @lua_pushcfunction(i32*, i32) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1

declare dso_local i8* @talloc_new(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
